--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,7 +3,7 @@
 <div class="table-responsive">
   <table class="table table-hover">
     <%= render "table_header",
-      headers: ["#", "First name", "Last name", "Phone", "Parents Phone", "Email", "Gender", "Date of Birth", "Active"],
+      headers: ["#", t('header.first_name'), t('header.last_name'), t('header.phone'),t('header.parents_phone'), t('header.email'), t('header.gender'), t('header.date_of_birth'), "Active"],
       colspan: 3 %>
 
     <tbody>
