--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -6,19 +6,19 @@
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
-          Phone: <span style="float: right"><%= @student.phone %></span>
+          <%= t('header.phone') %>: <span style="float: right"><%= @student.phone %></span>
         </li>
         <li class="list-group-item">
-          Parents Phone: <span style="float: right"><%= @student.phone %></span>
+          <%= t('header.parents_phone') %>: <span style="float: right"><%= @student.phone %></span>
         </li>
         <li class="list-group-item">
-          Email: <span style="float: right"><%= @student.email %></span>
+          <%= t('header.email') %>: <span style="float: right"><%= @student.email %></span>
         </li>
         <li class="list-group-item">
-          Gender: <span style="float: right"><%= @student.gender %></span>
+          <%= t('header.gender') %>: <span style="float: right"><%= @student.gender %></span>
         </li>
         <li class="list-group-item">
-          Date of birth: <span style="float: right"><%= @student.date_of_birth %></span>
+          <%= t('header.date_of_birth') %>: <span style="float: right"><%= @student.date_of_birth %></span>
         </li>
         <li class="list-group-item">
           Active: <span style="float: right"><%= @student.active %></span>
