--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -6,19 +6,9 @@
 <%= render "index_title", entity: "Course", path: new_course_path %>
 
 <table class="table table-dark">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Name</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Teacher</th>
-      <% if @student %>
-        <th>Register</th>
-      <% end %>
-      <th colspan="3"></ht>
-    </tr>
-  </thead>
+  <%= render "table_header",
+   headers: ["#", t('header.start_date'), t('header.end_date'), t('header.teacher'),t('header.register'), "Active"],
+      colspan: 3 %>
 
   <tbody>
     <% @courses.each do |course| %>
