--- a/app/views/application/_table_header.html.erb
+++ b/app/views/application/_table_header.html.erb
@@ -3,6 +3,9 @@
     <% headers.each do |header| %>
       <th scope="col"><%= header %></th>
     <% end %>
+    <% if @student.present? %>
+      <th>Register</th>
+    <% end %>
     <th colspan="<%= colspan %>"></th>
   </tr>
 </thead>
