--- a/app/views/enrolments/new.html.erb
+++ b/app/views/enrolments/new.html.erb
@@ -3,12 +3,12 @@
 <div class="row">
   <div class="col-md-4 offset-4">
     <%= simple_form_for @enrolment do |form| %>
-      <%= form.association :student, label_method: :full_name %>
-      <%= form.association :course, label_method: :name %>
+      <%= form.association :student, label_method: :full_name, label: t("title.student") %>
+      <%= form.association :course, label_method: :name, label: t("title.course") %>
 
       <div class="actions">
-        <%= form.button :submit, class: "btn btn-primary" %>
-        <%= link_to 'Back', students_path, class: 'btn btn-secondary' %>
+        <%= form.button :submit, class: "btn btn-primary", value: t("title.create_rolment")%>
+        <%= link_to t("title.back"), students_path, class: 'btn btn-secondary' %>
       </div>
     <% end %>
   </div>
