--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,7 +3,7 @@
 <div class="table-responsive">
   <table class="table table-hover">
     <%= render "table_header",
-      headers: ["#", "First name", "Last name", "Phone", "Parents Phone", "Email", "Gender", "Date of Birth", "Active"],
+      headers: ["#", t('header.first_name'), t('header.last_name'), t('header.phone'),t('header.parents_phone'), t('header.email'), t('header.gender'), t('header.date_of_birth'), "Active"],
       colspan: 3 %>
 
     <tbody>
@@ -19,9 +19,9 @@
           <td><%= student.date_of_birth %></td>
           <td><%= student.active %></td>
           <td>
-            <%= link_to 'Show', student, class: "btn btn-primary student-action-btn" %>
-            <%= link_to 'Edit', edit_student_path(student), class: "btn btn-success student-action-btn" %>
-            <%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger student-action-btn" %>
+            <%= link_to t('btn.show'), student, class: "btn btn-primary student-action-btn" %>
+            <%= link_to t('btn.edit'), edit_student_path(student), class: "btn btn-success student-action-btn" %>
+            <%= link_to t('btn.destroy'), student, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger student-action-btn" %>
             <%= link_to 'Course Registeration', new_enrolment_path(student_id: student.id), class: "btn btn-info student-action-btn" %>
           </td>
         </tr>
