--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,40 +3,30 @@
   <h4><%= @student.full_name %></h4>
 <% end %>
 
-<%= render "index_title", entity: "Course", path: new_course_path %>
+<%= render "index_title", entity: t("title.course"), path: new_course_path %>
+<div class="table-responsive">
+  <table class="table table-hover">
+    <%= render "table_header",
+      headers: ["#", t("title.name"), t("title.start_date"), t("title.end_date"), t("title.teacher")], colspan: 3 %>
 
-<table class="table table-dark">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Name</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Teacher</th>
-      <% if @student %>
-        <th>Register</th>
-      <% end %>
-      <th colspan="3"></ht>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @courses.each do |course| %>
-      <tr>
-        <th><%= course.id %></th>
-        <td><%= course.name %></td>
-        <td><%= course.start_date %></td>
-        <td><%= course.end_date %></td>
-        <td><%= course.teacher.full_name %></td>
-        <% if @student %>
-          <td><%= @student.has_course?(course) ? 'YES' : 'NO' %></td>
-        <% end %>
-        <td>
-          <%= link_to 'Show', course, class: "btn btn-primary" %>
-          <%= link_to 'Edit', edit_course_path(course), class: "btn btn-success" %>
-          <%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are your sure?' }, class: "btn btn-danger" %>
-        </td>
-      </tr>
+   <tbody>
+      <% @courses.each do |course| %>
+        <tr>
+          <th><%= course.id %></th>
+          <td><%= course.name %></td>
+          <td><%= course.start_date %></td>
+          <td><%= course.end_date %></td>
+          <td><%= course.teacher.full_name %></td>
+          <% if @student %>
+            <td><%= @student.has_course?(course) ? 'YES' : 'NO' %></td>
+          <% end %>
+          <td>
+            <%= link_to_icon edit_course_path(course), icon: "edit",type: "info"%>
+            <%= link_to_icon course, icon: "info",type: "info" %>
+            <%= link_to_icon course, method: :delete,data: {title: t("modal.are_you_sure") + '? ', confirm: t("modal.are_you_sure") + '?',cancel: t("modal.cancel"),commit: t("modal.delete") }, icon: "trash-alt",type: "danger" %>
+          </td>
+        </tr>
     <% end %>
   </tbody>
 </table>
