--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Welcomes!</h1>
-    <p class="lead">Our mission is to make education accessible to everyone.</p>
+    
+    <h1 class="display-4"><%= t('title.welcomes')%>!</h1>
+    <p class="lead"><%= t('title.our_mission')%>.</p>
   </div>
 </div>
