--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
+<%= content_for :title do %>
+  <% t('title.krobei') %>
+<% end %>
+
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     
