--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -26,7 +26,7 @@
 
       <div class="actions">
         <%= form.button :submit, value: t("title.update"), class: "btn btn-primary" %>
-        <%= link_to t("title.back"), students_path, class: 'btn btn-secondary' %>
+        <%= link_to t("action.cancel"), students_path, class: 'btn btn-secondary' %>
       </div>
     <% end %>
   </div>
