--- a/app/views/application/_index_title.html.erb
+++ b/app/views/application/_index_title.html.erb
@@ -1,3 +1,7 @@
+<%= content_for :title do %>
+  <% t('title.index', entity: entity) %>
+<% end %>
+
 <div class="row my-3">
   <div class="col-6">
     <h1><%= t('title.index', entity: entity) %></h1>
