--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,8 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    
-    <h1 class="display-4"><%= t('title.welcomes')%>!</h1>
-    <p class="lead"><%= t('title.our_mission')%>.</p>
+
+    <h1 class="display-4"><%= t('home.welcomes')%></h1>
+    <p class="lead"><%= t('home.our_mission')%></p>
   </div>
 </div>
