--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <%= link_to t('title.krobei'), root_path(locale: params[:locale]), class: "navbar-brand" %>
-  
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -12,9 +12,9 @@
           <%= link_to navbar_item[:title], navbar_item[:path], class: "nav-link" %>
         </li>
       <% end %>
-            <li class="nav-item dropdown">
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <%= t('title.language')%>
+          <%= t('lan.language')%>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to t('lan.english'), url_for(locale: 'en'), class: 'dropdown-item' %>
