--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,13 +1,13 @@
 <% if @student %>
-  <h1>Student Detail</h1>
+  <h1><%= t('title.detail', entity: t('entity.student')) %></h1>
   <h4><%= @student.full_name %></h4>
 <% end %>
 
-<%= render "index_title", entity: t("title.course"), path: new_course_path %>
+<%= render "index_title", entity: t("entity.course"), path: new_course_path %>
 <div class="table-responsive">
   <table class="table table-hover">
     <%= render "table_header",
-      headers: ["#", t("title.name"), t("title.start_date"), t("title.end_date"), t("title.teacher")], colspan: 3 %>
+      headers: ["#", t("column.name"), t("column.start_date"), t("column.end_date"), t("entity.teacher")], colspan: 3 %>
 
 
    <tbody>
@@ -19,12 +19,13 @@
           <td><%= course.end_date %></td>
           <td><%= course.teacher.full_name %></td>
           <% if @student %>
-            <td><%= @student.has_course?(course) ? 'YES' : 'NO' %></td>
+            <td><%= @student.has_course?(course) ? 'YES' : 'NO'%></td>
           <% end %>
           <td>
             <%= link_to_icon edit_course_path(course), icon: "edit",type: "info"%>
             <%= link_to_icon course, icon: "info",type: "info" %>
-            <%= link_to_icon course, method: :delete,data: {title: t("modal.are_you_sure") + '? ', confirm: t("modal.are_you_sure") + '?',cancel: t("modal.cancel"),commit: t("modal.delete") }, icon: "trash-alt",type: "danger" %>
+            <%#= link_to_icon course, method: :delete,data: {title: t("modal.are_you_sure") + '? ', confirm: t("modal.are_you_sure") + '?',cancel: t("modal.cancel"),commit: t("modal.delete") }, icon: "trash-alt",type: "danger", entity: :course %>
+            <%= link_to_destroy course, entity: :course %>
           </td>
         </tr>
     <% end %>
