--- a/app/views/enrolments/new.html.erb
+++ b/app/views/enrolments/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Enrolment</h1>
+<h1><% t('title.new', entity: t('entity.enrolment')) %></h1>
 
 <div class="row">
   <div class="col-md-4 offset-4">
@@ -7,8 +7,8 @@
       <%= form.association :course, label_method: :name, label: t("title.course") %>
 
       <div class="actions">
-        <%= form.button :submit, class: "btn btn-primary", value: t("title.create_rolment")%>
-        <%= link_to t("title.back"), students_path, class: 'btn btn-secondary' %>
+        <%= form.button :submit, class: "btn btn-primary", value: t("action.create_enrolment")%>
+        <%= link_to t("action.back"), students_path, class: 'btn btn-secondary' %>
       </div>
     <% end %>
   </div>
