--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -6,21 +6,21 @@
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
-          <%= t("title.phone") %>: <span style="float: right"><%= @teacher.phone %></span>
+          <%= t("table.phone") %>: <span style="float: right"><%= @teacher.phone %></span>
         </li>
         <li class="list-group-item">
-          <%= t("title.email") %>: <span style="float: right"><%= @teacher.email %></span>
+          <%= t("table.email") %>: <span style="float: right"><%= @teacher.email %></span>
         </li>
         <li class="list-group-item">
-          <%= t("title.gender") %>: <span style="float: right"><%= @teacher.gender %></span>
+          <%= t("table.gender") %>: <span style="float: right"><%= @teacher.gender %></span>
         </li>
         <li class="list-group-item">
-          <%= t("title.date_of_birth") %>: <span style="float: right"><%= @teacher.date_of_birth %></span>
+          <%= t("table.date_of_birth") %>: <span style="float: right"><%= @teacher.date_of_birth %></span>
         </li>
       </ul>
       <div class="card-body">
-        <%= link_to t("title.edit"), edit_teacher_path(@teacher), class: 'btn btn-primary' %>
-        <%= link_to t("title.back"), teachers_path, class: 'btn btn-secondary' %>
+        <%= link_to t("action.edit"), edit_teacher_path(@teacher), class: 'btn btn-primary' %>
+        <%= link_to t("action.back"), teachers_path, class: 'btn btn-secondary' %>
       </div>
     </div>
   </div>
